<resources>
    <string name="app_name">TakeItEasySK</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Inicia Sesión</string>
    <string name="register">Registrate</string>
    <string name="welcomeTitle">Take It Easy App - Store Manager</string>
    <string name="title_activity_store_keeper_dashboard">StoreKeeperDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="create_product">Registrar Producto</string>
    <string name="product_card_button_1">Actualizar producto</string>
    <string name="preferece_file_key">Ietim_preference_file</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="name">Nombre</string>
    <string name="stock">Existencias</string>
    <string name="description">Descripción</string>
    <string name="category">Categoría</string>
    <string name="price">Precio</string>
    <string name="product_register">Registrar</string>
    <string name="Add_Image_Button">Añadir imagen</string>
    <string name="logout">Log Out</string>
    <string name="registrate_como_tendero">Registrate como Tendero!</string>
    <string name="nombre">Nombre</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="phone_number">Phone Number</string>
    <string name="direcci_n">Dirección</string>
    <string name="datos_de_tu_tienda">Datos de tu tienda!</string>
    <string name="nombre_de_tu_tienda">Nombre de tu Tienda</string>
    <string name="direccion_de_la_tienda">Direccion de la tienda</string>
    <string name="tipo_de_tu_tienda">Tipo de tu tienda!</string>
    <string name="registrate">Registrate!</string>
    <string name="eliminar_producto">Eliminar Producto</string>
    <string name="existencias">Existencias</string>
    <string name="saveProduct">Guardar</string>
    <string name="update_product">Actualizar producto</string>
    <string name="Change_Image_Button">Cambiar imagen</string>
    <string-array name="Store_Types">
        <item>Selecciona!</item>
        <item>Droguería</item>
        <item>Supermercado</item>
        <item>Ferreteria</item>
        <item>Restaurante</item>
        <item>Panadería</item>
        <item>Variedades</item>

    </string-array>
</resources>