<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".UpdateProduct">


    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="54dp"
        style="?attr/borderlessButtonStyle"

        android:layout_marginStart="120dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="32dp"
        android:text="@string/product_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoriaproducto"
        app:layout_constraintVertical_bias="1.0"
        android:textColor="@color/white"
        app:backgroundTint="@android:color/holo_blue_dark"/>

    <EditText
        android:id="@+id/precioproducto"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/nombreproducto" />

    <EditText
        android:id="@+id/nombreproducto"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <EditText
        android:id="@+id/existenciasproducto"
        android:layout_width="244dp"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/precioproducto" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="67dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:text="@string/name"
        app:layout_constraintBaseline_toBaselineOf="@+id/nombreproducto"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="67dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:text="@string/price"
        app:layout_constraintBaseline_toBaselineOf="@+id/precioproducto"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="86dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:text="@string/stock"
        app:layout_constraintBaseline_toBaselineOf="@+id/existenciasproducto"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="91dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:text="@string/description"
        app:layout_constraintBaseline_toBaselineOf="@+id/descripcionproducto"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="67dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:text="@string/category"
        app:layout_constraintBaseline_toBaselineOf="@+id/categoriaproducto"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/categoriaproducto"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/descripcionproducto" />

    <EditText
        android:id="@+id/descripcionproducto"
        android:layout_width="0dp"
        android:layout_height="92dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/existenciasproducto" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="209dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:text="@string/create_product"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="210dp"
        style="?attr/borderlessButtonStyle"

        android:layout_height="52dp"
        android:layout_marginTop="52dp"
        android:drawableLeft="@android:drawable/ic_menu_gallery"
        android:text="@string/Add_Image_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:textColor="@color/white"
        app:backgroundTint="@android:color/holo_blue_dark"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="189dp"
        android:layout_height="166dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
